<!--
  ~ Copyright 2015 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Topeka</string>
    <string name="last_initial">Last Initial</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_avatar">Choose an Avatar</string>
    <string name="an_avatar">An Avatar</string>
    <string name="quiz_of_quizzes">%1$d / %2$d</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="category">Category</string>
    <string name="sign_out">Sign out</string>
    <string name="x_points">%1$d pts</string>
    <string name="back">back</string>
</resources>